bulma and bootstrap added - working on jquery highlighting on mouseover

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="jumbotron" style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div style="text-align:center">
+
 </div>
   <app-nav></app-nav>
 
