--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,20 +1,13 @@
-<p>nav works!</p>
-
-
-<div>
-  <div class="btn">image goes here</div>
-
+<nav class="has-background-black navbar">
 
 
   <div>
-
-
-    <ul>
-      <li>Home</li>
-      <li>The Beefy Mix</li>
-      <li>Events</li>
-      <li>Contact</li>
-      <li>Mixcloud</li>
+    <ul class="pl-5 has-text-grey is-uppercase">
+      <li class=" h4">Home</li>
+      <li class="pt-4 h4">The Beefy Mix</li>
+      <li class="pt-4 h4">Events</li>
+      <li class="pt-4 h4">Contact</li>
+      <li class="pt-4 h4">Mixcloud</li>
     </ul>
   </div>
-</div>
+</nav>
