added opacity change on lis

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,11 +3,11 @@
 
   <div>
     <ul class="pl-5 has-text-grey is-uppercase">
-      <li class=" h4">Home</li>
-      <li class="pt-4 h4">The Beefy Mix</li>
-      <li class="pt-4 h4">Events</li>
-      <li class="pt-4 h4">Contact</li>
-      <li class="pt-4 h4">Mixcloud</li>
+      <li class="h4"> <a href="#"> Home</a></li>
+      <li class="pt-4 h4"> <a href="#"> The Beefy Mix</a></li>
+      <li class="pt-4 h4"> <a href="#"> Events</a></li>
+      <li class="pt-4 h4"> <a href="#"> Contact</a></li>
+      <li class="pt-4 h4"> <a href="#"> Mixcloud</a></li>
     </ul>
   </div>
 </nav>
