--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,16 @@
+a {
+  color: rgba(255, 255, 255);
+  opacity: 0.5;
+  text-decoration: none;
+}
+
+a:hover {
+  transition: opacity 0.15s ease-in;
+  opacity: 1;
+  color: rgb(255, 255, 255);
+
+}
+
 html, body {
   height: 100vh;
 }
