--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="has-background-black navbar">
 
-
-  <div>
+<img src="/assets/img/logo.png" alt="">
+  <div class="ul-wrapper">
     <ul class="pl-5 has-text-grey is-uppercase">
       <li class="h4"> <a href="#"> Home</a></li>
       <li class="pt-4 h4"> <a href="#"> The Beefy Mix</a></li>
