--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,11 +1,11 @@
-<div class="fade-from-left">
+<div [ngStyle]="{background : 'url(/assets/bg/crowd-789652_1920.jpg'}" class="background-image">
 
-  <div [ngStyle]="{background : 'url(/assets/bg/crowd-789652_1920.jpg'}" class="background-image">
+  <div class="fade-from-left">
 
     <div class="title-box">
 
-      <h1 class="has-text-white">
-        The Beefy Mix
+      <h1 class="has-text-light h1">
+        The <br> Beefy <br> Mix
       </h1>
 
     </div>
