centering beefy mix title

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,9 +2,9 @@
 
   <div class="fade-from-left">
 
-    <div class="title-box">
+    <div class="title-box pt-5">
 
-      <h1 class="has-text-light h1">
+      <h1 class="has-text-light h1 pt-5">
         The <br> Beefy <br> Mix
       </h1>
 
