playing around with fonts for main beefy logo font

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,8 +4,8 @@
 
     <div class="title-box pt-5">
 
-      <h1 class="has-text-light h1 pt-5">
-        The <br> Beefy <br> Mix
+      <h1 class="has-text-grey h1 pt-5">
+        <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
       </h1>
 
     </div>
