--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -25,5 +25,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 
 h1 {
-  font-size: 10rem;
+  font-size: 9rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
+
