--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Darker+Grotesque|PT+Sans+Caption:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,900&display=swap');
