--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -26,7 +26,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 h1 {
   font-size: 9rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 500;
 }
 
