--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,11 +4,15 @@
 
     <div class="title-box pt-5">
 
-      <h1 class="has-text-grey h1 pt-5">
+      <h1 class="has-text-grey pt-5">
         <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
       </h1>
+          <div class="align-middle">
+            <button class="btn has-text-light">Button</button>
+          </div>
 
     </div>
+
 
   </div>
 
