adding button positioning

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,5 +1,14 @@
-.title-box  {
+.title-box, .buttons, .button-block  {
   display: inline-block;
+}
+
+.buttons {
+  padding: 50px;
+}
+
+.button-block {
+
+
 }
 
 
