--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,11 +7,17 @@
       <h1 class="has-text-grey pt-5">
         <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
       </h1>
-          <div class="align-middle">
-            <button class="btn has-text-light">Button</button>
-          </div>
-
     </div>
+      <div class="buttons">
+        <div class="button-block">
+          <button class="btn btn-lg m-4 has-text-light">Listen</button>
+        </div>
+        <div class="button-block">
+            <button class="btn btn-lg m-4 has-text-light">Contact</button>
+        </div>
+
+      </div>
+
 
 
   </div>
