--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,21 +2,37 @@
 
   <div class="fade-from-left">
 
-    <div class="title-box pt-5">
+    <div class="columns">
 
-      <h1 class="has-text-grey pt-5">
-        <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
-      </h1>
-    </div>
-      <div class="buttons">
-        <div class="button-block">
-          <button class="btn btn-lg m-4 has-text-light">Listen</button>
-        </div>
-        <div class="button-block">
-            <button class="btn btn-lg m-4 has-text-light">Contact</button>
-        </div>
+      <div class="column">
+
+
+              <h1 class="has-text-grey pt-5">
+                <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
+              </h1>
+
 
       </div>
+
+      <div class="column pt-5">
+
+              <div class="button-block">
+                <button class="btn btn-lg m-4 has-text-light" id="listenButton">Listen</button>
+              </div>
+              <div class="button-block">
+                  <button class="btn btn-lg m-4 has-text-light"  id="contactButton">Contact</button>
+              </div>
+
+
+
+      </div>
+
+
+
+    </div>
+
+
+
 
 
 
