added footer, fixed some layout stuff

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,23 @@
-<div class="container">
+<div class="container-fluid has-background-black">
 
 
   <div class="columns">
     <div class="column">
+      <h4 class="has-text-light">Social</h4>
       <ul>
-        <a href=""><li class="has-text-bold">Social</li></a>
+        <a href=""><li class="">Facebook</li></a>
+        <a href=""><li class="">Instagram</li></a>
+        <a href=""><li class="">Mixcloud</li></a>
       </ul>
     </div>
-    <div class="column"></div>
+    <div class="column">
+        <h4 class="has-text-light">Social</h4>
+        <ul>
+          <a href=""><li class="">Facebook</li></a>
+          <a href=""><li class="">Instagram</li></a>
+          <a href=""><li class="">Mixcloud</li></a>
+        </ul>
+
+    </div>
   </div>
 </div>
