--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,41 +1,23 @@
 <div [ngStyle]="{background : 'url(/assets/bg/crowd-789652_1920.jpg'}" class="background-image">
-
   <div class="fade-from-left">
-
     <div class="columns">
-
       <div class="column">
-
-
-              <h1 class="has-text-grey pt-5">
-                <p> THE </p> <p class="has-text-light">BEEFY</p> M<em>I</em>X
-              </h1>
-
-
+        <div class="titleContainer">
+          <h1 class="has-text-grey pt-5">
+            <p>THE</p>
+            <p class="has-text-light">BEEFY</p> M<em>I</em>X
+          </h1>
+        </div>
       </div>
-
       <div class="column pt-5">
-
-              <div class="button-block">
-                <button class="btn btn-lg m-4 has-text-light" id="listenButton">Listen</button>
-              </div>
-              <div class="button-block">
-                  <button class="btn btn-lg m-4 has-text-light"  id="contactButton">Contact</button>
-              </div>
-
-
-
+        <div class="button-block">
+          <button class="btn btn-lg m-4 has-text-light" id="listenButton">Listen</button>
+        </div>
+        <div class="button-block">
+          <button class="btn btn-lg m-4 has-text-light" id="contactButton">Contact</button>
+        </div>
       </div>
-
-
-
     </div>
-
-
-
-
-
-
   </div>
 
 </div>
