added font awesome icons via npm

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,26 @@
-<div class="container-fluid has-background-black">
+<div class=" footer has-background-black">
+
 
 
   <div class="columns">
     <div class="column">
-      <h4 class="has-text-light">Social</h4>
-      <ul>
-        <a href=""><li class="">Facebook</li></a>
-        <a href=""><li class="">Instagram</li></a>
-        <a href=""><li class="">Mixcloud</li></a>
-      </ul>
+        <h4 class="has-text-light">Social</h4>
+        <ul>
+          <a href=""><li class=""><fa name="facebook"></fa> Facebook</li></a>
+          <a href=""><li class=""><fa name="instagram"></fa> Instagram </li></a>
+          <a href=""><li class=""><fa name="mixcloud"></fa> Mixcloud</li></a>
+        </ul>
     </div>
+
+    <div class="column">
+        <h4 class="has-text-light">Follow Beefy</h4>
+        <ul>
+          <a href=""><li class="">Facebook</li></a>
+          <a href=""><li class="">Instagram</li></a>
+          <a href=""><li class="">Mixcloud</li></a>
+        </ul>
+      </div>
+
     <div class="column">
         <h4 class="has-text-light">Social</h4>
         <ul>
